--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,9 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "type": "lua",
+            "type": "node",
             "request": "launch",
             "name": "Debug",
             "program": "${workspaceFolder}/main.lua"
